k8s/model-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
  template:
    metadata:
      labels:
        app: model-service
    spec:
      containers:
        - name: model-service
          image: ghcr.io/remla25-team17/model-service:latest #Use Helm instead
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shared-volume
              mountPath: /app/shared
      volumes:
        - name: shared-volume
          hostPath:
            path: /mnt/shared
            type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  selector:
    app: model-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
